syntax = "proto3";
option go_package = ".;face_features";

package face_features;

message Photo{
  string path = 1;
  string mask = 2;
}

message Face{
  bool have = 1;
}

service FaceGRPCHandler{
  rpc HaveFace(Photo) returns (Face) {}
  rpc AddMask(Photo) returns (Photo) {}
}
